# anime

./: .dockerignore  .env.example  .gitignore  Dockerfile  compose.yaml  main.py  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  test_env_check.py
backend/app/: __init__.py  __main__.py  main.py
backend/app/anilist/: client.py  models.py  queries.py
backend/app/api/: __init__.py  config.py  dependencies.py  jobs.py  run.py  schemas.py  tasks.py
backend/app/cli/: __init__.py  app.py
backend/app/core/: bootstrap.py  concurrency.py  config.py  logging.py  task_tracker.py  template.py  utils.py
backend/app/db/: models.py  mongo.py  repositories.py
backend/app/downloader/: torrent_downloader.py
backend/scripts/: healthcheck.py
backend/tests/: conftest.py  test_anilist_client.py  test_api_global_settings.py  test_app_config_api.py  test_filters.py  test_path_mapper.py  test_scheduler_operations.py  test_scraper_normalization.py  test_settings_metadata.py  test_template_integration.py  test_utils.py
frontend/: .dockerignore  Dockerfile  compose.yaml  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx
frontend/components/: app-sidebar.tsx  page-shell.tsx  theme-toggle.tsx
frontend/lib/: api-client.ts  api-hooks.ts  api-types.ts  path-template.ts
nginx/: nginx.conf
src/anime_service/: __init__.py  __main__.py
tests/: stubs.py  test_anilist_client.py  test_filters.py  test_scheduler_operations.py  test_scraper_normalization.py  test_utils.py
(+37 files in other folders)
