[project]
name = "anime-service"
version = "0.1.0"
description = "AniList-driven torrent monitoring service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"httpx[http2]>=0.27.0",
	"pydantic>=2.7.0",
	"pydantic-settings>=2.2.0",
	"structlog>=24.1.0",
	"apscheduler>=3.10.4",
	"motor>=3.4.0",
	"pymongo>=4.6.0",
	"selectolax>=0.3.12",
	"typer>=0.12.3",
	"prometheus-client>=0.19.0",
	"fastapi>=0.111.0",
	"uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.2.0",
	"pytest-asyncio>=0.23.0",
	"respx>=0.20.2",
	"pytest-mock>=3.12.0",
	"black>=24.4.0",
	"ruff>=0.5.0",
]

[project.scripts]
anime-service = "anime_service.__main__:main"


[tool.uv]
package = true

[dependency-groups]
dev = [
	"pytest>=8.2.0",
	"pytest-asyncio>=0.23.0",
	"respx>=0.20.2",
	"pytest-mock>=3.12.0",
	"black>=24.4.0",
	"ruff>=0.5.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.black]
line-length = 100
target-version = ["py311"]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]


[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
